syntax = "proto3";

package Rpc.role;

import "global.proto";

/****************************************
 *                                      *
 *           Role                       *
 *                                      *
 ****************************************/

message cacheRoleData {
    message Request {
        uint32 accountId = 1;
    }
    message Response {
        Error error = 1;
    }
}

message onlineOperation {
    message Request {
        uint32 accountId = 1;
    }
    message Response {
        Error error = 1;
    }
}